--- a/public/home_planificador.html
+++ b/public/home_planificador.html
@@ -7,7 +7,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     
-    <script src="/js/auth.js"></script>
     <style>
         body {
             font-family: 'Roboto', Arial, sans-serif;
@@ -57,6 +56,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="#" data-page="itinerarios">Itinerarios</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-page="seleccionar_itinerarios">Seleccionar Itinerarios</a>
+                    </li>
                 </ul>
                 <div class="d-flex">
                     <span class="nav-link text-white me-3" id="user-info">Usuario</span>
@@ -72,8 +74,10 @@
     </div>
 
     <!-- Scripts -->
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js"></script>
     <script src="/js/auth.js"></script>
     <script>
         $(document).ready(function() {
