--- a/public/itinerarios.html
+++ b/public/itinerarios.html
@@ -389,7 +389,7 @@
                 {
                     className: 'details-control',
                     orderable: false,
-                    data: null,
+                    data: 'id',
                     defaultContent: '',
                     render: function () {
                         return '<i class="fas fa-plus-circle expand-button"></i>';
