Signed-off-by: Juan Iscar <juan.iscar@exponentiateam.com>

--- a/public/home_planificador.html
+++ b/public/home_planificador.html
@@ -58,7 +58,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" data-page="itinerarios">Itinerarios</a>
+                        <a class="nav-link active" href="#" data-page="itinerarios">Itinerarios Planificados</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" data-page="seleccionar_itinerarios">Seleccionar Itinerarios</a>
