Signed-off-by: Juan Iscar <juan.iscar@exponentiateam.com>

--- a/public/home_planificador.html
+++ b/public/home_planificador.html
@@ -58,7 +58,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" data-page="itinerarios">Itinerarios Planificados</a>
+                        <a class="nav-link active" href="#" data-page="itinerarios_planificados">Itinerarios Planificados</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" data-page="seleccionar_itinerarios">Seleccionar Itinerarios</a>
@@ -86,7 +86,7 @@
     <script>
         $(document).ready(function() {
             // Cargar itinerarios.html por defecto
-            cargarContenido('itinerarios');
+            cargarContenido('itinerarios_planificados');
 
             // Manejar clicks en el menú
             $('.nav-link').click(function(e) {
