--- a/public/itinerarios_planificados.html
+++ b/public/itinerarios_planificados.html
@@ -30,9 +30,9 @@
 <body>
     <div class="container-fluid">
         <div class="d-flex justify-content-between align-items-center mb-4">
-            <h2>Gestión de Itinerarios</h2>
+            <h2>Gestión de Itinerarios Planificados</h2>
             <button class="btn btn-primary">
-                <i class="fas fa-plus"></i> Nuevo Itinerario
+                <i class="fas fa-plus"></i> Nuevo tren custom
             </button>
         </div>
 
@@ -125,7 +125,7 @@
                 processing: true,
                 serverSide: true,
                 ajax: {
-                    url: '/api/itinerarios/paginated',
+                    url: '/api/itinerariosSeleccionados/paginated',
                     headers: {
                         'Authorization': getAuthToken()
                     }
