Signed-off-by: Juan Iscar <juan.iscar@exponentiateam.com>

--- a/public/seleccionar_itinerarios.html
+++ b/public/seleccionar_itinerarios.html
@@ -528,7 +528,7 @@
                 })
                 .then(data => {
                     if (data) {
-                        alert(`¡Éxito! Se han creado ${itinerariosSeleccionados.size} itinerarios seleccionados para hoy.`);
+                        alert(`¡Éxito! Se han creado ${itinerariosSeleccionados.size} itinerarios seleccionados.`);
                         // Limpiar selección después del éxito
                         itinerariosSeleccionados.clear();
                         $('#tablaItinerarios tbody tr').removeClass('row-selected');
