TODO malla circulaciones Signed-off-by: Juan Iscar <juan.iscar@exponentiateam.com>

--- a/public/home_planificador.html
+++ b/public/home_planificador.html
@@ -101,6 +101,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#" data-page="seleccionar_itinerarios">Seleccionar Itinerarios</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-page="malla_circulaciones">Malla de Circulaciones</a>
+                    </li>
                 </ul>
                 <div class="d-flex align-items-center">
                     <!-- Selector de fecha -->
