--- a/public/home_planificador.html
+++ b/public/home_planificador.html
@@ -104,6 +104,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#" data-page="malla_circulaciones">Malla de Circulaciones</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-page="control_estaciones">Control Estaciones</a>
+                    </li>
                 </ul>
                 <div class="d-flex align-items-center">
                     <!-- Selector de fecha -->
